white space on the right side corrected in the tablet mode

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -100,9 +100,19 @@
 .game-type-row-one{
     grid-template-columns: repeat(2, 200px);
     flex-wrap: wrap;
+    gap: 10px;
 }
 .game-type-row-two{
     grid-template-columns: repeat(2, 200px); 
+}
+.grid-container {
+    display: flex;
+    border-radius: 50px;
+    align-items: center;
+    gap: 0.2rem;
+    padding: 0.3rem 0.1rem 0.3rem 0.5rem;
+    border: none;
+    background: #FFF;
 }
 
 /* footer section starts here */
